Data Preprocessed and ready for model

--- a/svms.ipynb
+++ b/svms.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.6.1-final"
+   "version": "3.7.4-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,8 +18,8 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python36164bitrootconda6e0c314544c443b5938248d6fa4e1245",
-   "display_name": "Python 3.6.1 64-bit ('root': conda)"
+   "name": "python37464bitbaseconda32b04c9e2a3b40a4a549c2ff9baea20b",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)"
   }
  },
  "cells": [
@@ -58,6 +58,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import Imputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -84,20 +85,107 @@
     "    \"workclass\",\n",
     "    \"fnlwgt\",\n",
     "    \"education\",\n",
-    "    \"education-num\",\n",
-    "    \"marital-status\",\n",
+    "    \"education_num\",\n",
+    "    \"marital_status\",\n",
     "    \"occupation\",\n",
     "    \"relationship\",\n",
     "    \"race\",\n",
     "    \"sex\",\n",
-    "    \"capital-gain\",\n",
-    "    \"capital-loss\",\n",
-    "    \"hours-per-week\",\n",
-    "    \"native-country\",\n",
-    "    \"earning-label\"\n",
-    "])\n",
+    "    \"capital_gain\",\n",
+    "    \"capital_loss\",\n",
+    "    \"hours_per_week\",\n",
+    "    \"native_country\",\n",
+    "    \"earning_label\"\n",
+    "], skipinitialspace=True)\n",
     "\n",
-    "df.head()"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Explore some attributes of the dataset\n",
+    "\n",
+    "# dir(df)\n",
+    "print(\"Features: \", df.columns)\n",
+    "print(\"Labels: \", pd.Series.unique(df.earning_label))\n",
+    "print(\"Shape: \", df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Because the native.country variable has too many categories, and most of the data points are from the US (91%), we combine all the categories except for “United-States”into the “Other” category:\n",
+    "df.loc[df['native_country']!='United-States', 'native_country']='Other'\n",
+    "\n",
+    "# Save the output label in binary encoding, 0: <=50k, 1: > 50k\n",
+    "Y=pd.Categorical(df['earning_label']).codes\n",
+    "Y = np.where(Y==0, -1, Y) \n",
+    "print(Y)\n",
+    "\n",
+    "# education is not needed as uducation_num performs its function\n",
+    "# also drop the label as it is not needed for the model\n",
+    "df=df.drop(['education','earning_label'], axis=1)\n",
+    "\n",
+    "# determine unique values of each categorical feature:\n",
+    "for feature in ['workclass','marital_status','occupation','relationship','race','sex','native_country']:\n",
+    "    print(feature, pd.Series.unique(df[feature]))\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical features to one-hot encoding\n",
+    "df=pd.get_dummies(df)\n",
+    "df\n",
+    "\n",
+    "# encoder = OneHotEncoder(handle_unknown='ignore',sparse=False)\n",
+    "# encoder.fit(df)\n",
+    "# df = encoder.transform(df)\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finally, split the data into training and testing sets 80\\/20\n",
+    "train_X, test_X, train_Y, test_Y = train_test_split(df.values, Y, test_size = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Fitting the Model\n",
+    "\n",
+    "With the data now processed, it is ready to have SVM applied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Acknowlegements\n",
+    "\n",
+    "https://methods.sagepub.com/dataset/howtoguide/support-vector-machine-in-aci-1996-python"
    ]
   },
   {
