Attempt to add visualization

--- a/svms.ipynb
+++ b/svms.ipynb
@@ -101,24 +101,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# target_names = pd.Series.unique(df.earning_label)\n",
-    "# feature_names = df.columns\n",
+    "# from itertools import combinations\n",
     "\n",
-    "# ranges = []\n",
-    "# type_count = 0\n",
-    "# for i in range(0, len(target_names) - 1):\n",
-    "#     additional = np.count_nonzero(labels == i)\n",
-    "#     ranges.append((i, type_count, additional + type_count))\n",
-    "#     type_count += additional\n",
-    "    \n",
-    "# for i in range(0, 4)[0:4]:\n",
-    "#     for j in range(i + 1, 4):\n",
-    "#         for target_type, start, end in ranges:\n",
-    "#             plot.scatter(data[start:end, i], data[start:end ,j], label=target_names[target_type])\n",
-    "#         plot.xlabel(dataset.feature_names[i])\n",
-    "#         plot.ylabel(dataset.feature_names[j])\n",
-    "#         plot.legend()\n",
-    "#         plot.show()"
+    "# labels = combinations(df.columns, 2)\n",
+    "# indices = combinations(range(len(df.columns)), 2)\n",
+    "# for (x_label, y_label), (x1, x2) in zip(labels, indices):\n",
+    "#     for i, target_name in enumerate(pd.Series.unique(df.earning_label)):\n",
+    "#         income = df[ df.earning_label == i ]\n",
+    "#         plt.scatter(income[:,x1], income[:,x2], label=target_name, alpha=0.7)\n",
+    "#     plt.xlabel(x_label)\n",
+    "#     plt.ylabel(y_label)\n",
+    "#     plt.legend(loc='upper left')\n",
+    "#     plt.show()\n",
+    "\n",
+    "print(df.describe())\n",
+    "\n",
+    "n = 100  # for 2 random indices\n",
+    "index = np.random.choice(df.shape[0], n, replace=False) \n",
+    "random = df.iloc[index, :]\n",
+    "\n",
+    "for i, target_name in enumerate(pd.Series.unique(df.earning_label)):\n",
+    "        income = random[ random.earning_label == i ]\n",
+    "        plt.scatter(random.capital_loss, random.capital_gain, label=target_name, alpha=0.7)\n",
+    "plt.xlabel('fnlwgt')\n",
+    "plt.ylabel(\"education_num\")\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
@@ -225,9 +233,9 @@
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "clf = SVC(gamma='auto')\n",
+    "clf = SVC(kernel='poly')\n",
     "clf.fit(train_X, train_Y)\n",
-    "SVC(gamma='auto')\n",
+    "SVC()\n",
     "print(clf.predict(test_X))\n",
     "\n",
     "print(df.values)"
