--- a/svms.ipynb
+++ b/svms.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "# Finally, split the data into training and testing sets 80\\/20\n",
-    "partialData = df.values[:, [2, 5]]\n",
+    "#partialData = df.values[:, [0, 2]] #Enable To only fit with two features\n",
     "partialData = df.values\n",
     "train_X, test_X, train_Y, test_Y = train_test_split(partialData, Y, test_size = 0.2)"
    ]
@@ -197,26 +197,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reduce the instances of <50k in the training data set to match the number of >50k\n",
     "greaterThan = np.where(train_Y == 1)\n",
-    "print(greaterThan)\n",
     "gTCount = greaterThan[0].shape[0]\n",
-    "print(gTCount)\n",
     "\n",
     "lT = np.where(train_Y == -1)[0]\n",
     "lT = np.random.permutation(lT)\n",
-    "print(lT)\n",
-    "print(lT.shape)\n",
     "\n",
     "index = np.hstack((lT[0:gTCount], greaterThan[0]))\n",
-    "print(index.shape)\n",
     "train_Y = train_Y[index]\n",
-    "print(train_Y)\n",
-    "train_X = train_X[index]\n",
-    "print(train_X)\n",
-    "print(train_Y.shape)\n",
-    "\n",
-    "print(np.where(train_Y == -1)[0].shape[0])\n",
-    "print(np.where(train_Y == 1)[0].shape[0])"
+    "train_X = train_X[index]\n"
    ]
   },
   {
@@ -225,15 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(train_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Plot all of the basic features against each other to look for a good candidate\n",
     "X = df.values\n",
     "for i in range(0, 6):\n",
     "    for j in range(i + 1, 6):\n",
@@ -261,8 +243,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Fit with linear SVM\n",
     "from svm import SVM\n",
-    "svm = SVM(10, .1)\n",
+    "svm = SVM(50, .001)\n",
     "w = svm.fit(train_X, train_Y)\n",
     "print(w)"
    ]
@@ -273,15 +256,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Predict from test data and print statistics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
     "predicted_Y = svm.predict(test_X, w)\n",
-    "_X = np.hstack((test_X, np.ones((test_X.shape[0], 1))))\n",
-    "p = np.sum(_X * w, axis=1)\n",
-    "print(p)\n",
-    "predicted_Y = p / abs(p)\n",
-    "print(predicted_Y)\n",
     "\n",
     "print(\"Accuracy:\")\n",
-    "print ((predicted_Y - test_Y == 0).sum() / test_Y.shape[0])"
+    "count = test_Y.shape[0]\n",
+    "print ((predicted_Y - test_Y == 0).sum() / count)\n",
+    "cm = confusion_matrix(test_Y, predicted_Y)\n",
+    "print(\"Confusion Matrix\")\n",
+    "print(cm)"
    ]
   },
   {
@@ -290,35 +275,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the dividing line\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "X = train_X\n",
-    "y = train_Y\n",
-    "print(y)\n",
+    "X = partialData\n",
+    "y = Y\n",
     "\n",
-    "independant_index = 2\n",
-    "dependant_index = 3\n",
+    "independant_index = 0\n",
+    "dependant_index = 1\n",
     "\n",
     "independant = X[:, independant_index]\n",
     "\n",
     "divBy = -w[dependant_index]\n",
     "multBy = w[independant_index]\n",
     "addBy = 0\n",
-    "print (multBy)\n",
-    "print(divBy)\n",
     "\n",
     "addBy += w[len(w) - 1]\n",
     "\n",
-    "i1 = np.min(independant)\n",
-    "i2 = np.max(independant)\n",
+    "i1 = np.min(independant) - 5\n",
+    "i2 = np.max(independant) + 5\n",
     "\n",
     "result = np.array([[i1, (i1 * multBy + addBy) / divBy],\n",
     "          [i2, (i2 * multBy + addBy) / divBy]])\n",
-    "print(result)\n",
     "\n",
-    "plt.plot(result[:, 0], result[:, 1], scaley=True)\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(10, 10)\n",
+    "\n",
     "\n",
     "plt.scatter(X[:, independant_index], X[:, dependant_index], c=y)\n",
+    "plt.plot(result[:, 0], result[:, 1], scaley=False, scalex=False)\n",
+    "plt.xlabel(\"Age\", size=24)\n",
+    "plt.ylabel(\"Education\", size=24)\n",
     "plt.show()"
    ]
   },
@@ -328,13 +315,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Fit with sklearn's SVM implementation\n",
     "from sklearn.svm import SVC\n",
-    "clf = SVC(kernel='poly')\n",
-    "clf.fit(train_X, train_Y)\n",
-    "SVC()\n",
-    "print(clf.predict(test_X))\n",
-    "\n",
-    "print(df.values)"
+    "clf = SVC(kernel='poly', probability=True)\n",
+    "clf.fit(train_X, train_Y)"
    ]
   },
   {
@@ -343,6 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Predict the test data\n",
     "predicted_Y = clf.predict(test_X)\n",
     "print(predicted_Y)"
    ]
@@ -350,15 +335,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Print the statistics\n",
+    "print(\"Accuracy:\")\n",
+    "print ((predicted_Y - test_Y == 0).sum() / test_Y.shape[0])\n",
+    "cm = confusion_matrix(test_Y, predicted_Y)\n",
+    "print(\"Confusion Matrix\")\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Accuracy:\")\n",
-    "print ((predicted_Y - test_Y == 0).sum() / test_Y.shape[0])"
+    "#Plot the ROC curve\n",
+    "import sklearn.metrics as metrics\n",
+    "\n",
+    "probs = clf.predict_proba(test_X)\n",
+    "preds = probs[:,1]\n",
+    "fpr, tpr, threshold = metrics.roc_curve(test_Y, preds)\n",
+    "roc_auc = metrics.auc(fpr, tpr)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
+    "plt.legend(loc = 'lower right')\n",
+    "plt.plot([0, 1], [0, 1],'r--')\n",
+    "plt.xlim([0, 1])\n",
+    "plt.ylim([0, 1])\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot sklearn's fitted SVM\n",
+    "from mlxtend.plotting import plot_decision_regions\n",
+    "\n",
+    "plot_decision_regions(X=partialData, \n",
+    "                      y=Y,\n",
+    "                      clf=clf, \n",
+    "                      legend=None)\n",
+    "\n",
+    "plt.xlabel(\"Age\", size=14)\n",
+    "plt.ylabel(\"Education\", size=14)"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,9 +424,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.6.1 64-bit ('root': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36164bitrootconda6e0c314544c443b5938248d6fa4e1245"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1-final"
+   "version": "3.7.4"
   },
   "mimetype": "text/x-python",
   "name": "python",
